# tc-camera-app

./: configure.ac
project/: Makefile.am  main.c
project/app/camera/: camera.c  camera.h  lut.h
project/common/: basic_operation.h  klog.c  klog.h  list.h  log.h  message_queue.c  message_queue.h  v4l2.c  v4l2.h
project/framework/video_input/: video_input.c  video_input.h
project/framework/video_output/: video_output.c  video_output.h
project/hal/cam_ipc/: cam_ipc.c  cam_ipc.h
project/hal/g2d/: g2d.c  g2d.h
project/hal/mcu_manager/: cm4_manager.c  cm4_manager.h
project/hal/overlay/: overlay.c  overlay.h
project/hal/switch/: switch.c  switch.h
project/hal/v4l2/: v4l2_capture.c  v4l2_capture.h
